# Auth_sprint_1

./: .env.example  README.md  pyproject.toml
app/: cli.py  exceptions.py  main.py
app/api/: error_decorators.py
app/api/v1/auth/: auth_router.py
app/api/v1/roles/: roles_router.py
app/api/v1/users/: users_router.py
app/core/: config.py
app/db/postgres/: base.py
app/db/postgres/models/: base.py  users.py
app/db/redis/: redis_repo.py
app/schemas/api/v1/: auth_schemas.py  roles_schemas.py
app/schemas/services/auth/: role_service_schemas.py  user_service_schemas.py
app/schemas/services/repositories/: history_repository_schemas.py  user_repository_schemas.py
app/services/auth/: auth_service.py  registration_service.py  role_service.py  role_services.py  session_service.py  token_service.py  user_changes_service.py  user_public_service.py  user_service.py
app/services/fastapi/: dependencies.py
app/services/repositories/: history_repository.py  postgres_repository.py  role_repository.py  user_repository.py
app/services/utils/: hash_service.py  jwt_service.py
infra/: .env.example
migrations/versions/: 2024_06_11_1043-e4d5ccc6ec42_initial.py  2024_06_11_2244-0da065593a69_dynamic_salt.py  2024_07_02_2212-f366b824f054_ondelete.py
tests/api/v1/auth/: test_auth.py  test_login.py
